# circle-so-python-sdk

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: admin-api.md  auth-api.md  headless-api.md  limitations.md  models.md  quickstart.md  webhooks.md
src/circle/: __init__.py  client.py  constants.py  exceptions.py  http.py  pagination.py  rate_limit.py  utils.py  validation.py  webhooks.py
src/circle/api/: __init__.py  admin_access_groups.py  admin_community.py  admin_courses.py  admin_events.py  admin_misc.py  admin_posts.py  admin_spaces.py  admin_tags.py  auth.py  headless_chat_notif_members.py  headless_misc.py  headless_spaces_posts.py
src/circle/models/: __init__.py  auth.py  base.py
src/circle/models/admin/: __init__.py  community.py  courses.py  events.py  members.py  misc.py  posts.py  spaces.py  tags.py
src/circle/models/headless/: __init__.py  chat.py  comments.py  courses.py  members.py  misc.py  notifications.py  posts.py  spaces.py
tests/: conftest.py  test_admin.py  test_audit.py  test_auth.py  test_client.py  test_coverage_expansion.py  test_headless.py  test_http.py  test_models.py
tests/integration/: conftest.py  test_smoke.py
