[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circle-so-python-sdk"
version = "0.1.2"
description = "Python SDK for Circle.so - Admin V2, Headless Auth, and Headless Client V1 APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Damilola Afolabi" }]
keywords = ["circle", "circle.so", "community", "sdk", "api", "circle-api", "circle-sdk", "circle-python", "headless-api", "admin-api", "community-management", "circle-so"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/boiyelove/circle-so-python-sdk"
Documentation = "https://github.com/boiyelove/circle-so-python-sdk/tree/main/docs"
Repository = "https://github.com/boiyelove/circle-so-python-sdk"
Changelog = "https://github.com/boiyelove/circle-so-python-sdk/blob/main/CHANGELOG.md"
Issues = "https://github.com/boiyelove/circle-so-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/circle"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration (deselect with '-m not integration')",
]
